:globe_with_meridians: Fix Presets input on safari

--- a/packages/fyndiq-component-input/input.css
+++ b/packages/fyndiq-component-input/input.css
@@ -3,10 +3,12 @@
 .input {
   padding: 0 20px;
   background: var(--color-white);
+  margin: 0;
   border: 1px solid var(--color-border);
   border-radius: 2px;
   font-size: 15px;
   line-height: 48px;
+  outline: 0;
 
   &:invalid {
     box-shadow: none;
@@ -30,7 +32,6 @@
     border-left: 0;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-    height: 100%;
   }
 }
 
@@ -64,6 +65,7 @@
 .invisibleInput {
   font-weight: inherit;
   font-size: inherit;
+  margin: 0;
   color: inherit;
   border: 1px solid transparent;
   border-top-left-radius: 2px;
